force-app/main/default/objects/FEC_Communication_History__c/FEC_Communication_History__c.object-meta.xml
<CustomObject>
    <description>Lịch sử giao tiếp</description>
    <label>Communication History</label>
    <nameField>
        <label>Communication History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Communication Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>