force-app/main/default/objects/FEC_Communication_History__c/fields/FEC_Account_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Account_Contract_Number__c</fullName>
    <label>Account/ Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>