force-app/main/default/objects/FEC_Communication_History__c/fields/FEC_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Campaign_Name__c</fullName>
    <description>Tên chiến dịch</description>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>