force-app/main/default/objects/FEC_Communication_History__c/fields/FEC_Communication_Template__c.field-meta.xml
<CustomField>
    <fullName>FEC_Communication_Template__c</fullName>
    <description>Mẫu giao tiếp</description>
    <label>Communication Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>