force-app/main/default/objects/FEC_Communication_History__c/fields/FEC_Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Communication_Type__c</fullName>
    <description>Kênh giao tiếp</description>
    <label>Communication Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>