force-app/main/default/objects/FEC_Communication_History__c/fields/FEC_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Phone_Number__c</fullName>
    <description>Số điện thoại</description>
    <label>Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>